# rtc-asr

./: .dockerignore  .gitignore  DEPLOY.md  DREAMS.md  Dockerfile  Makefile  NOTICE  README.md  config.example  docker-compose.yml  monitoring.yml  requirements.txt
docs/: api-reference.md  benchmarks.md  index.html  index.md  livekit-integration.md  llms.txt  local-stt-v1.md  pipecat-integration.md  robots.txt  sitemap.xml  troubleshooting.md
pipecat-local-stt/: README.md  pyproject.toml
pipecat-local-stt/src/pipecat_local_stt/: __init__.py  config.py  metrics.py  pipecat_compat.py  protocol.py  rtc_asr.py  service.py
pipecat-local-stt/tests/: conftest.py  fake_local_stt_server.py  test_backpressure.py  test_example_bot.py  test_lifecycle.py  test_protocol.py  test_service_fake_server.py  test_service_latency_smoke.py
scripts/: bench_local_stt_stream.py  benchmark_mlx_asr.py  benchmark_mlx_text.py  build_benchmark_manifest.py  compare_local_stt_transports.py  prerender_benchmark_homepage.py  report_stale_benchmark_artifacts.py
src/: __init__.py  audio_processor.py  config.py  main.py  model_loader.py  rtc_client.py  streaming.py
tests/: benchmark.py  test_audio_processor.py  test_bench_local_stt_stream.py  test_benchmark.py  test_benchmark_mlx_asr.py  test_benchmark_mlx_text.py  test_benchmark_site.py  test_browser_pipecat_demo.py  test_client.py  test_compare_local_stt_transports.py  test_local_stt_v1_protocol.py  test_mlx_text_benchmark.py  test_model_loader.py  test_pipecat_local_stt_bot_example.py  test_report_stale_benchmark_artifacts.py  test_smoke.py
(+79 files in other folders)
