[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "pipecat-local-stt"
version = "0.1.0"
description = "Pipecat STT service for Local STT v1 websocket sidecars"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "websockets>=12.0",
  "pipecat-ai>=1.3.0",
]

[project.optional-dependencies]
test = [
  "pytest>=8.2.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
